<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_meal_list"
        android:icon="@drawable/ic_meal_list"
        app:showAsAction="ifRoom"
        android:title="@string/navigation_bar_list_meal" />
    <item
        android:id="@+id/navigation_meal_reports"
        android:icon="@drawable/ic_reports"
        app:showAsAction="ifRoom"
        android:title="@string/navigation_bar_generate_report" />
    <item
        android:id="@+id/navigation_meal_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/navigation_bar_settings" />
    <item
        android:id="@+id/navigation_meal_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"
        android:title="@string/navigation_bar_help" />
</menu>