<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView

        android:id="@+id/title"
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
       >


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meal_name_edit_text_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/meal_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:hint="@string/enter_meal_name"
                android:importantForAutofill="no"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/icon_title"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meal_name_edit_text_holder"
            android:layout_width="0dp"
            style="@style/DefaultTitle"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meal_icon_title"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mealListRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_title" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            android:textColor="@color/primary_dark"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/mealListRV" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/red"
            app:layout_constraintEnd_toStartOf="@id/saveButton"

            app:layout_constraintTop_toBottomOf="@+id/mealListRV" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>