<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:minWidth="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/iconLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:tint="@color/white"
            android:src="@drawable/ic_feeling_natural" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_news"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_news_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_news_description"
            android:textColor="#5d5d5d"
            android:textSize="14sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="#5d5d5d"
            android:textStyle="bold"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:fadeScrollbars="false"
            android:layout_marginTop="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- Melhorias visuais"
                android:textColor="#5d5d5d"
                android:textSize="18sp" />

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- Melhoria na velocidade de geração de relatórios"
                android:textColor="#5d5d5d"
                android:textSize="18sp" />

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- Adição de um novo tipo de refeição"
                android:textColor="#5d5d5d"
                android:textSize="18sp" />

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- Novas melhorias a caminho"
                android:textColor="#5d5d5d"
                android:textSize="18sp" />


        </LinearLayout>
        </ScrollView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="4dp">

        <Button
            android:id="@+id/btnPositive"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_use"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>