<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.settings.subsettings.manageMeals.ManageMealsActivity">

    <TextView
        android:id="@+id/title"
        style="@style/DefaultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_meals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:listitem="@layout/image_collection_recycler_view_item"
        tools:itemCount="5"
        android:id="@+id/default_meal_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_add"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        style="@style/DefaultTitle"
        android:id="@+id/title_my_meals"
        android:layout_width="0dp"
        android:text="@string/my_meals"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/default_meal_list_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_meal_list_rv" />


    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_my_meals"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/list_add_meal_view_item"
        android:id="@+id/my_meals_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:gravity="center"
        android:text="@string/no_meals_registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_my_meals"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/list_add_meal_view_item"
        android:id="@+id/no_meals_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>